# cookiecutter-cppproject

./: .gitmodules  README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .travis.yml  CMakeLists.txt  LICENSE
{{ cookiecutter.project_name }}/include/: {{ cookiecutter.project_name }}.hh
{{ cookiecutter.project_name }}/src/: {{ cookiecutter.project_name }}.cc
{{ cookiecutter.project_name }}/test/: {{ cookiecutter.project_name }}test.cc
